--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,93 @@
-baseURL = 'http://lexip.dev/'
-languageCode = 'en-us'
-title = 'lexip.dev'
+baseurl = "https://blist.vercel.app"
+metaDataFormat = "yaml"
+title = "Lexip's Blog"
 theme = "blist"
+
+DefaultContentLanguage = "en"
+DefaultContentLanguageInSubdir = true
+[languages]
+  [languages.en]
+    contentDir = "content/en"
+    weight = 1
+    languageName = "English"
+    [languages.en.params]
+      introTitle = "Heyo, Sailor!"
+      introSubtitle = "Welcome to the  blog of <strong>@xLexip</strong>! <br> I'm a junior developer who shares some personal projects here."
+      introPhoto = "/memoji_wave.png"
+      logo = "/logo.png"
+    [[languages.en.menu.main]]
+        name = "Blog"
+        url = "blog"
+        weight = 1
+
+    [[languages.en.menu.main]]
+        name = "About"
+        url = "page/about/"
+        weight = 2
+
+    [[languages.en.menu.main]]
+        name = "Tags"
+        url = "tags"
+        weight = 3
+
+    [[languages.en.menu.main]]
+        name = "Top Post"
+        url = "/en/blog/emoji-support/"
+        weight = 4
+
+[params]
+  # Enable the darkmode toggle in header
+  darkModeToggle = true
+
+  # Enable search in header
+  enableSearch = true
+
+  # Custom copyright - optional
+copyright = "© 2022 lexip.dev · Theme: apvarun"
+  favicon = "/favicon.ico"
+
+  # Color for the intro details and social links block, not applicable for dark mode
+  # Supported values: Any color from TailwindCSS default colors
+  # Reference: https://tailwindcss.com/docs/customizing-colors
+  ascentColor = "bg-blue-100"
+
+  # The page bundle that is shown on the front page
+  frontBundle = "blog"
+
+  # Used to hide the post metadata such as posted date, reading time and word count
+  # Can be used at site level or page level
+  hideMeta = false
+
+  # To hide "Other languages" option if the post is available in multiple languages
+  # Can be used at site level or page level
+  hideOtherLanguages = false
+
+[params.homepage.social]
+  # Global params common for both languages
+  title = "Follow me"
+  description = "Feel free to checkout my digital world, I'd love your support there."
+  github = "https://github.com/xlexip"
+  telegram = "https://t.me/lexipc"
+  buymeacoffee = "https://www.buymeacoffee.com/"
+  reddit = "https://reddit.com/u/xlexip"
+  xda = "https://forum.xda-developers.com/m/xlexip.11110723/"
+  twitter = "https://twitter.com/xlexip"
+  # linkedin = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+
+[[menu.main]]
+  name = "About"
+  url = "/about"
+
+[build]
+  writeStats = true
+
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+
+# syntax highlight settings
+[markup]
+  [markup.highlight]
+    style = "dracula"
+  [markup.goldmark.renderer]
+    # Enable to include inline HTML
+    unsafe = true
